--- a/geometry/convexhull.html
+++ b/geometry/convexhull.html
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../intro.html">Introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">Algebra</li><li class="chapter-item expanded "><a href="../algebra/gcd.html"><strong aria-hidden="true">1.</strong> GCD, LCM</a></li><li class="chapter-item expanded "><a href="../algebra/extgcd.html"><strong aria-hidden="true">2.</strong> Extended Euclidean Algorithm</a></li><li class="chapter-item expanded "><a href="../algebra/crt.html"><strong aria-hidden="true">3.</strong> Chinese Remainder Theorem</a></li><li class="chapter-item expanded "><a href="../algebra/millerrabin.html"><strong aria-hidden="true">4.</strong> Deterministic Miller-Rabin Primality Test</a></li><li class="chapter-item expanded "><a href="../algebra/pollardrho.html"><strong aria-hidden="true">5.</strong> Pollard's Rho Algorithm</a></li><li class="chapter-item expanded "><a href="../algebra/ntt.html"><strong aria-hidden="true">6.</strong> Number Theoretic Transform</a></li><li class="chapter-item expanded affix "><li class="part-title">Numerical Algorithms</li><li class="chapter-item expanded "><a href="../numerical/isqrt.html"><strong aria-hidden="true">7.</strong> Integer Square Root</a></li><li class="chapter-item expanded "><a href="../numerical/sieve.html"><strong aria-hidden="true">8.</strong> Sieve</a></li><li class="chapter-item expanded "><a href="../numerical/linrec/intro.html"><strong aria-hidden="true">9.</strong> Linear Recurrence</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../numerical/linrec/berlekamp.html"><strong aria-hidden="true">9.1.</strong> Berlekamp-Massey</a></li><li class="chapter-item expanded "><a href="../numerical/linrec/kitamasa.html"><strong aria-hidden="true">9.2.</strong> Kitamasa</a></li><li class="chapter-item expanded "><a href="../numerical/linrec/bostanmori.html"><strong aria-hidden="true">9.3.</strong> Bostan-Mori</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Data Structures</li><li class="chapter-item expanded "><a href="../datastructure/bitarray.html"><strong aria-hidden="true">10.</strong> Bitset</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/intro.html"><strong aria-hidden="true">11.</strong> Segment Trees</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../datastructure/segtree/segtree.html"><strong aria-hidden="true">11.1.</strong> Segment Tree</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/fenwick.html"><strong aria-hidden="true">11.2.</strong> Fenwick Tree</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/lazyseg.html"><strong aria-hidden="true">11.3.</strong> Lazy Segment Tree</a></li></ol></li><li class="chapter-item expanded "><a href="../datastructure/rope.html"><strong aria-hidden="true">12.</strong> Rope</a></li><li class="chapter-item expanded affix "><li class="part-title">Graphs</li><li class="chapter-item expanded "><a href="../graphs/adjlist.html"><strong aria-hidden="true">13.</strong> Adjacency List Graph Representation</a></li><li class="chapter-item expanded "><a href="../graphs/dijkstra.html"><strong aria-hidden="true">14.</strong> Dijkstra</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../graphs/dial.html"><strong aria-hidden="true">14.1.</strong> Dial</a></li></ol></li><li class="chapter-item expanded "><a href="../graphs/dsu.html"><strong aria-hidden="true">15.</strong> Disjoint Set Union</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../graphs/wdsu.html"><strong aria-hidden="true">15.1.</strong> Weighted DSU</a></li></ol></li><li class="chapter-item expanded "><a href="../graphs/scc.html"><strong aria-hidden="true">16.</strong> Strongly Connected Components</a></li><li class="chapter-item expanded "><a href="../graphs/2sat.html"><strong aria-hidden="true">17.</strong> 2-SAT</a></li><li class="chapter-item expanded "><a href="../graphs/flow/intro.html"><strong aria-hidden="true">18.</strong> Flow</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../graphs/flow/dinic.html"><strong aria-hidden="true">18.1.</strong> Dinic's Algorithm</a></li><li class="chapter-item expanded "><a href="../graphs/flow/mcmf.html"><strong aria-hidden="true">18.2.</strong> MCMF</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Strings</li><li class="chapter-item expanded "><a href="../strings/kmp.html"><strong aria-hidden="true">19.</strong> KMP</a></li><li class="chapter-item expanded "><a href="../strings/manacher.html"><strong aria-hidden="true">20.</strong> Manacher</a></li><li class="chapter-item expanded "><a href="../strings/salcp.html"><strong aria-hidden="true">21.</strong> Suffix Array and LCP Array</a></li><li class="chapter-item expanded affix "><li class="part-title">Geometry</li><li class="chapter-item expanded "><a href="../geometry/convexhull.html" class="active"><strong aria-hidden="true">22.</strong> Convex Hull</a></li><li class="chapter-item expanded affix "><li class="part-title">Unclassified</li><li class="chapter-item expanded "><a href="../unclass/valcomp.html"><strong aria-hidden="true">23.</strong> Value Compression</a></li><li class="chapter-item expanded "><a href="../unclass/lis.html"><strong aria-hidden="true">24.</strong> Longest Increasing Subsequence</a></li><li class="chapter-item expanded "><a href="../unclass/mos.html"><strong aria-hidden="true">25.</strong> Mo's</a></li><li class="chapter-item expanded "><a href="../unclass/bigint.html"><strong aria-hidden="true">26.</strong> Arbitrary-Precision Integer</a></li><li class="chapter-item expanded "><a href="../unclass/fraction.html"><strong aria-hidden="true">27.</strong> Fraction</a></li><li class="chapter-item expanded affix "><li class="part-title">Misc</li><li class="chapter-item expanded "><a href="../misc/fastio.html"><strong aria-hidden="true">28.</strong> Fast IO</a></li><li class="chapter-item expanded "><a href="../misc/itertools.html"><strong aria-hidden="true">29.</strong> Iterator Tools</a></li><li class="chapter-item expanded "><a href="../misc/macro.html"><strong aria-hidden="true">30.</strong> Macros</a></li><li class="chapter-item expanded "><a href="../misc/zero_one_trait.html"><strong aria-hidden="true">31.</strong> Zero/One Trait (Deprecated)</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../intro.html">Introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">Math</li><li class="chapter-item expanded "><a href="../math/sieve.html"><strong aria-hidden="true">1.</strong> Sieve</a></li><li class="chapter-item expanded "><a href="../math/gcd.html"><strong aria-hidden="true">2.</strong> GCD, LCM</a></li><li class="chapter-item expanded "><a href="../math/extgcd.html"><strong aria-hidden="true">3.</strong> Extended Euclidean Algorithm</a></li><li class="chapter-item expanded "><a href="../math/crt.html"><strong aria-hidden="true">4.</strong> Chinese Remainder Theorem</a></li><li class="chapter-item expanded "><a href="../math/millerrabin.html"><strong aria-hidden="true">5.</strong> Deterministic Miller-Rabin Primality Test</a></li><li class="chapter-item expanded "><a href="../math/pollardrho.html"><strong aria-hidden="true">6.</strong> Pollard's Rho Algorithm</a></li><li class="chapter-item expanded "><a href="../math/ntt.html"><strong aria-hidden="true">7.</strong> Number Theoretic Transform</a></li><li class="chapter-item expanded "><a href="../math/linrec/intro.html"><strong aria-hidden="true">8.</strong> Linear Recurrence</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../math/linrec/berlekamp.html"><strong aria-hidden="true">8.1.</strong> Berlekamp-Massey</a></li><li class="chapter-item expanded "><a href="../math/linrec/kitamasa.html"><strong aria-hidden="true">8.2.</strong> Kitamasa</a></li><li class="chapter-item expanded "><a href="../math/linrec/bostanmori.html"><strong aria-hidden="true">8.3.</strong> Bostan-Mori</a></li></ol></li><li class="chapter-item expanded "><a href="../math/isqrt.html"><strong aria-hidden="true">9.</strong> Integer Square Root</a></li><li class="chapter-item expanded affix "><li class="part-title">Data Structures</li><li class="chapter-item expanded "><a href="../datastructure/dsu.html"><strong aria-hidden="true">10.</strong> Disjoint Set Union</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../datastructure/wdsu.html"><strong aria-hidden="true">10.1.</strong> Weighted DSU</a></li></ol></li><li class="chapter-item expanded "><a href="../datastructure/segtree/intro.html"><strong aria-hidden="true">11.</strong> Segment Trees</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../datastructure/segtree/segtree.html"><strong aria-hidden="true">11.1.</strong> Segment Tree</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/fenwick.html"><strong aria-hidden="true">11.2.</strong> Fenwick Tree</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/lazyseg.html"><strong aria-hidden="true">11.3.</strong> Lazy Segment Tree</a></li></ol></li><li class="chapter-item expanded "><a href="../datastructure/rope.html"><strong aria-hidden="true">12.</strong> Rope</a></li><li class="chapter-item expanded "><a href="../datastructure/bitarray.html"><strong aria-hidden="true">13.</strong> Bitset</a></li><li class="chapter-item expanded affix "><li class="part-title">Graphs</li><li class="chapter-item expanded "><a href="../graphs/dijkstra.html"><strong aria-hidden="true">14.</strong> Dijkstra</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../graphs/dial.html"><strong aria-hidden="true">14.1.</strong> Dial</a></li></ol></li><li class="chapter-item expanded "><a href="../graphs/scc.html"><strong aria-hidden="true">15.</strong> Strongly Connected Components</a></li><li class="chapter-item expanded "><a href="../graphs/2sat.html"><strong aria-hidden="true">16.</strong> 2-SAT</a></li><li class="chapter-item expanded "><a href="../graphs/flow/intro.html"><strong aria-hidden="true">17.</strong> Flow</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../graphs/flow/dinic.html"><strong aria-hidden="true">17.1.</strong> Dinic's Algorithm</a></li><li class="chapter-item expanded "><a href="../graphs/flow/mcmf.html"><strong aria-hidden="true">17.2.</strong> MCMF</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Strings</li><li class="chapter-item expanded "><a href="../strings/kmp.html"><strong aria-hidden="true">18.</strong> KMP</a></li><li class="chapter-item expanded "><a href="../strings/manacher.html"><strong aria-hidden="true">19.</strong> Manacher</a></li><li class="chapter-item expanded "><a href="../strings/salcp.html"><strong aria-hidden="true">20.</strong> Suffix Array and LCP Array</a></li><li class="chapter-item expanded affix "><li class="part-title">Geometry</li><li class="chapter-item expanded "><a href="../geometry/convexhull.html" class="active"><strong aria-hidden="true">21.</strong> Convex Hull</a></li><li class="chapter-item expanded "><a href="../geometry/line_intersection.html"><strong aria-hidden="true">22.</strong> Line Intersection</a></li><li class="chapter-item expanded affix "><li class="part-title">Unclassified</li><li class="chapter-item expanded "><a href="../unclass/valcomp.html"><strong aria-hidden="true">23.</strong> Value Compression</a></li><li class="chapter-item expanded "><a href="../unclass/lis.html"><strong aria-hidden="true">24.</strong> Longest Increasing Subsequence</a></li><li class="chapter-item expanded "><a href="../unclass/mos.html"><strong aria-hidden="true">25.</strong> Mo's</a></li><li class="chapter-item expanded "><a href="../unclass/bigint.html"><strong aria-hidden="true">26.</strong> Arbitrary-Precision Integer</a></li><li class="chapter-item expanded "><a href="../unclass/fraction.html"><strong aria-hidden="true">27.</strong> Fraction</a></li><li class="chapter-item expanded affix "><li class="part-title">Misc</li><li class="chapter-item expanded "><a href="../misc/fastio.html"><strong aria-hidden="true">28.</strong> Fast IO</a></li><li class="chapter-item expanded "><a href="../misc/itertools.html"><strong aria-hidden="true">29.</strong> Iterator Tools</a></li><li class="chapter-item expanded "><a href="../misc/macro.html"><strong aria-hidden="true">30.</strong> Macros</a></li><li class="chapter-item expanded affix "><li class="part-title">Deprecated</li><li class="chapter-item expanded "><a href="../zdeprecated/adjlist.html"><strong aria-hidden="true">31.</strong> Adjacency List Graph Representation</a></li><li class="chapter-item expanded "><a href="../zdeprecated/zero_one_trait.html"><strong aria-hidden="true">32.</strong> Zero/One Trait</a></li><li class="chapter-item expanded "><a href="../zdeprecated/deprecated_macros.html"><strong aria-hidden="true">33.</strong> Deprecated Macros</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -148,65 +148,58 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="convex-hull"><a class="header" href="#convex-hull">Convex Hull</a></h1>
-<p><code>cvh(pts: &amp;[Point])</code> returns indices of points included in a convex hull of <code>pts</code>.
-It's implemented based on monotone chain algorithm, a much intuitive and straightforward convex hull
-algorithm compared to the well-known Graham scan.</p>
-<p>The code below excludes the points on the sides of the hull, but by simply changing <code>&gt;=</code> from lines calling <code>ccw</code> to <code>&gt;</code>,
-one can change its behavior to include such points.</p>
-<p>If <code>pts</code> includes duplicates and those happen to be on the convex hull, then only one of them is included in the result.</p>
+<p><code>convex_hull</code> finds a convex hull of a given array.
+It's implemented based on monotone chain algorithm, a much intuitive and straightforward convex hull algorithm compared to the well-known Graham scan.</p>
+<p>If <code>COLINEAR</code> is set to <code>false</code>, then every point which lies on a vertex of a convex hull, but not at the endpoints of it, is excluded. If it's set to <code>true</code>, then those points are all included.</p>
+<p>The result is sorted in clockwise direction.</p>
+<p>If the input includes duplicates and those happen to be on the convex hull, then only one of them is included in the result.</p>
 <h2 id="code"><a class="header" href="#code">Code</a></h2>
-<pre><code class="language-rust noplayground">type Coord = i32;
-type CCWOut = i64;
-type Point = (Coord, Coord);
+<pre><code class="language-rust noplayground">type Point = (i64, i64);
 
-fn ccw(a: &amp;Point, b: &amp;Point, c: &amp;Point) -&gt; CCWOut {
-    let ba = (b.0 as CCWOut - a.0 as CCWOut, b.1 as CCWOut - a.1 as CCWOut);
-    let cb = (c.0 as CCWOut - b.0 as CCWOut, c.1 as CCWOut - b.1 as CCWOut);
-    ba.0 * cb.1 - ba.1 * cb.0
-}
-
-fn cvh(pts: &amp;[Point]) -&gt; Vec&lt;usize&gt; {
-    if pts.is_empty() {
-        return vec![];
-    } else if pts.len() == 1 {
-        return vec![0];
+/// Returns a convex hull of `arr`.
+/// If `COLINEAR` is set to `false`, then every point which lies on a vertex of a convex hull, but not at the endpoints of it, is excluded.
+/// If `COLINEAR` is set to `true`, then such points are all included.
+/// The result is sorted in clockwise direction.
+///
+/// The implementation utilizes monotone-chain convex hull algorithm.
+fn convex_hull&lt;const COLINEAR: bool&gt;(arr: &amp;[Point]) -&gt; Vec&lt;Point&gt; {
+    let mut arr = arr.to_owned();
+    arr.sort_unstable();
+    arr.dedup();
+    if arr.len() &lt;= 1 {
+        return arr.to_vec();
     }
+    let mut ret = vec![];
 
-    let n = pts.len();
-
-    let mut refs: Vec&lt;_&gt; = (0..n).collect();
-    refs.sort_unstable_by_key(|&amp;i| pts[i]);
-    refs.dedup_by_key(|i| pts[*i]);
-
-    let mut upper = vec![refs[0]];
-    for &amp;pt in refs.iter().skip(1) {
-        while upper.len() &gt; 1 {
-            let ul = upper.len();
-            if ccw(&amp;pts[upper[ul - 2]], &amp;pts[upper[ul - 1]], &amp;pts[pt]) &gt; 0 {
-                upper.pop();
-            } else {
-                break;
+    fn monotone&lt;const COLINEAR: bool&gt;(it: impl Iterator&lt;Item = Point&gt;) -&gt; Vec&lt;Point&gt; {
+        let sub = |(a, b): Point, (c, d): Point| (a - c, b - d);
+        let cross = |(a, b): Point, (c, d): Point| a as i128 * d as i128 - b as i128 * c as i128;
+        let ccw = |a: Point, b: Point, c: Point| cross(sub(b, a), sub(c, b));
+        let mut dl = vec![];
+        for p in it {
+            while dl.len() &gt;= 2 {
+                let n = dl.len();
+                let v = ccw(dl[n - 2], dl[n - 1], p);
+                if v &gt; 0 || (!COLINEAR &amp;&amp; v == 0) {
+                    dl.pop();
+                } else {
+                    break;
+                }
             }
+            dl.push(p);
         }
-        upper.push(pt);
+        dl
     }
 
-    let mut lower = vec![*refs.last().unwrap()];
-    for &amp;pt in refs.iter().rev().skip(1) {
-        while lower.len() &gt; 1 {
-            let ll = lower.len();
-            if ccw(&amp;pts[lower[ll - 2]], &amp;pts[lower[ll - 1]], &amp;pts[pt]) &gt; 0 {
-                lower.pop();
-            } else {
-                break;
-            }
-        }
-        lower.push(pt);
-    }
+    ret.extend(monotone::&lt;COLINEAR&gt;(arr.iter().copied()));
+    ret.pop();
+    ret.extend(monotone::&lt;COLINEAR&gt;(arr.iter().copied().rev()));
+    ret.pop();
 
-    lower.pop();
-    upper.into_iter().chain(lower.into_iter().skip(1)).collect()
+    ret
 }</code></pre>
+<hr />
+<p>Last modified on 231008.</p>
 
                     </main>
 
@@ -216,7 +209,7 @@ fn cvh(pts: &amp;[Point]) -&gt; Vec&lt;usize&gt; {
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next" href="../unclass/valcomp.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="../geometry/line_intersection.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -230,7 +223,7 @@ fn cvh(pts: &amp;[Point]) -&gt; Vec&lt;usize&gt; {
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next" href="../unclass/valcomp.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="../geometry/line_intersection.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
