--- a/graphs/dial.html
+++ b/graphs/dial.html
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../intro.html">Introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">Algebra</li><li class="chapter-item expanded "><a href="../algebra/gcd.html"><strong aria-hidden="true">1.</strong> GCD, LCM</a></li><li class="chapter-item expanded "><a href="../algebra/extgcd.html"><strong aria-hidden="true">2.</strong> Extended Euclidean Algorithm</a></li><li class="chapter-item expanded "><a href="../algebra/crt.html"><strong aria-hidden="true">3.</strong> Chinese Remainder Theorem</a></li><li class="chapter-item expanded "><a href="../algebra/millerrabin.html"><strong aria-hidden="true">4.</strong> Deterministic Miller-Rabin Primality Test</a></li><li class="chapter-item expanded "><a href="../algebra/pollardrho.html"><strong aria-hidden="true">5.</strong> Pollard's Rho Algorithm</a></li><li class="chapter-item expanded "><a href="../algebra/ntt.html"><strong aria-hidden="true">6.</strong> Number Theoretic Transform</a></li><li class="chapter-item expanded affix "><li class="part-title">Numerical Algorithms</li><li class="chapter-item expanded "><a href="../numerical/isqrt.html"><strong aria-hidden="true">7.</strong> Integer Square Root</a></li><li class="chapter-item expanded "><a href="../numerical/sieve.html"><strong aria-hidden="true">8.</strong> Sieve</a></li><li class="chapter-item expanded "><a href="../numerical/linrec/intro.html"><strong aria-hidden="true">9.</strong> Linear Recurrence</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../numerical/linrec/berlekamp.html"><strong aria-hidden="true">9.1.</strong> Berlekamp-Massey</a></li><li class="chapter-item expanded "><a href="../numerical/linrec/kitamasa.html"><strong aria-hidden="true">9.2.</strong> Kitamasa</a></li><li class="chapter-item expanded "><a href="../numerical/linrec/bostanmori.html"><strong aria-hidden="true">9.3.</strong> Bostan-Mori</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Data Structures</li><li class="chapter-item expanded "><a href="../datastructure/bitarray.html"><strong aria-hidden="true">10.</strong> Bitset</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/intro.html"><strong aria-hidden="true">11.</strong> Segment Trees</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../datastructure/segtree/segtree.html"><strong aria-hidden="true">11.1.</strong> Segment Tree</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/fenwick.html"><strong aria-hidden="true">11.2.</strong> Fenwick Tree</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/lazyseg.html"><strong aria-hidden="true">11.3.</strong> Lazy Segment Tree</a></li></ol></li><li class="chapter-item expanded "><a href="../datastructure/rope.html"><strong aria-hidden="true">12.</strong> Rope</a></li><li class="chapter-item expanded affix "><li class="part-title">Graphs</li><li class="chapter-item expanded "><a href="../graphs/adjlist.html"><strong aria-hidden="true">13.</strong> Adjacency List Graph Representation</a></li><li class="chapter-item expanded "><a href="../graphs/dijkstra.html"><strong aria-hidden="true">14.</strong> Dijkstra</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../graphs/dial.html" class="active"><strong aria-hidden="true">14.1.</strong> Dial</a></li></ol></li><li class="chapter-item expanded "><a href="../graphs/dsu.html"><strong aria-hidden="true">15.</strong> Disjoint Set Union</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../graphs/wdsu.html"><strong aria-hidden="true">15.1.</strong> Weighted DSU</a></li></ol></li><li class="chapter-item expanded "><a href="../graphs/scc.html"><strong aria-hidden="true">16.</strong> Strongly Connected Components</a></li><li class="chapter-item expanded "><a href="../graphs/2sat.html"><strong aria-hidden="true">17.</strong> 2-SAT</a></li><li class="chapter-item expanded "><a href="../graphs/flow/intro.html"><strong aria-hidden="true">18.</strong> Flow</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../graphs/flow/dinic.html"><strong aria-hidden="true">18.1.</strong> Dinic's Algorithm</a></li><li class="chapter-item expanded "><a href="../graphs/flow/mcmf.html"><strong aria-hidden="true">18.2.</strong> MCMF</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Strings</li><li class="chapter-item expanded "><a href="../strings/kmp.html"><strong aria-hidden="true">19.</strong> KMP</a></li><li class="chapter-item expanded "><a href="../strings/manacher.html"><strong aria-hidden="true">20.</strong> Manacher</a></li><li class="chapter-item expanded "><a href="../strings/salcp.html"><strong aria-hidden="true">21.</strong> Suffix Array and LCP Array</a></li><li class="chapter-item expanded affix "><li class="part-title">Geometry</li><li class="chapter-item expanded "><a href="../geometry/convexhull.html"><strong aria-hidden="true">22.</strong> Convex Hull</a></li><li class="chapter-item expanded affix "><li class="part-title">Unclassified</li><li class="chapter-item expanded "><a href="../unclass/valcomp.html"><strong aria-hidden="true">23.</strong> Value Compression</a></li><li class="chapter-item expanded "><a href="../unclass/lis.html"><strong aria-hidden="true">24.</strong> Longest Increasing Subsequence</a></li><li class="chapter-item expanded "><a href="../unclass/mos.html"><strong aria-hidden="true">25.</strong> Mo's</a></li><li class="chapter-item expanded "><a href="../unclass/bigint.html"><strong aria-hidden="true">26.</strong> Arbitrary-Precision Integer</a></li><li class="chapter-item expanded "><a href="../unclass/fraction.html"><strong aria-hidden="true">27.</strong> Fraction</a></li><li class="chapter-item expanded affix "><li class="part-title">Misc</li><li class="chapter-item expanded "><a href="../misc/fastio.html"><strong aria-hidden="true">28.</strong> Fast IO</a></li><li class="chapter-item expanded "><a href="../misc/itertools.html"><strong aria-hidden="true">29.</strong> Iterator Tools</a></li><li class="chapter-item expanded "><a href="../misc/macro.html"><strong aria-hidden="true">30.</strong> Macros</a></li><li class="chapter-item expanded "><a href="../misc/zero_one_trait.html"><strong aria-hidden="true">31.</strong> Zero/One Trait (Deprecated)</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../intro.html">Introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">Math</li><li class="chapter-item expanded "><a href="../math/sieve.html"><strong aria-hidden="true">1.</strong> Sieve</a></li><li class="chapter-item expanded "><a href="../math/gcd.html"><strong aria-hidden="true">2.</strong> GCD, LCM</a></li><li class="chapter-item expanded "><a href="../math/extgcd.html"><strong aria-hidden="true">3.</strong> Extended Euclidean Algorithm</a></li><li class="chapter-item expanded "><a href="../math/crt.html"><strong aria-hidden="true">4.</strong> Chinese Remainder Theorem</a></li><li class="chapter-item expanded "><a href="../math/millerrabin.html"><strong aria-hidden="true">5.</strong> Deterministic Miller-Rabin Primality Test</a></li><li class="chapter-item expanded "><a href="../math/pollardrho.html"><strong aria-hidden="true">6.</strong> Pollard's Rho Algorithm</a></li><li class="chapter-item expanded "><a href="../math/ntt.html"><strong aria-hidden="true">7.</strong> Number Theoretic Transform</a></li><li class="chapter-item expanded "><a href="../math/linrec/intro.html"><strong aria-hidden="true">8.</strong> Linear Recurrence</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../math/linrec/berlekamp.html"><strong aria-hidden="true">8.1.</strong> Berlekamp-Massey</a></li><li class="chapter-item expanded "><a href="../math/linrec/kitamasa.html"><strong aria-hidden="true">8.2.</strong> Kitamasa</a></li><li class="chapter-item expanded "><a href="../math/linrec/bostanmori.html"><strong aria-hidden="true">8.3.</strong> Bostan-Mori</a></li></ol></li><li class="chapter-item expanded "><a href="../math/isqrt.html"><strong aria-hidden="true">9.</strong> Integer Square Root</a></li><li class="chapter-item expanded affix "><li class="part-title">Data Structures</li><li class="chapter-item expanded "><a href="../datastructure/dsu.html"><strong aria-hidden="true">10.</strong> Disjoint Set Union</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../datastructure/wdsu.html"><strong aria-hidden="true">10.1.</strong> Weighted DSU</a></li></ol></li><li class="chapter-item expanded "><a href="../datastructure/segtree/intro.html"><strong aria-hidden="true">11.</strong> Segment Trees</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../datastructure/segtree/segtree.html"><strong aria-hidden="true">11.1.</strong> Segment Tree</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/fenwick.html"><strong aria-hidden="true">11.2.</strong> Fenwick Tree</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/lazyseg.html"><strong aria-hidden="true">11.3.</strong> Lazy Segment Tree</a></li></ol></li><li class="chapter-item expanded "><a href="../datastructure/rope.html"><strong aria-hidden="true">12.</strong> Rope</a></li><li class="chapter-item expanded "><a href="../datastructure/bitarray.html"><strong aria-hidden="true">13.</strong> Bitset</a></li><li class="chapter-item expanded affix "><li class="part-title">Graphs</li><li class="chapter-item expanded "><a href="../graphs/dijkstra.html"><strong aria-hidden="true">14.</strong> Dijkstra</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../graphs/dial.html" class="active"><strong aria-hidden="true">14.1.</strong> Dial</a></li></ol></li><li class="chapter-item expanded "><a href="../graphs/scc.html"><strong aria-hidden="true">15.</strong> Strongly Connected Components</a></li><li class="chapter-item expanded "><a href="../graphs/2sat.html"><strong aria-hidden="true">16.</strong> 2-SAT</a></li><li class="chapter-item expanded "><a href="../graphs/flow/intro.html"><strong aria-hidden="true">17.</strong> Flow</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../graphs/flow/dinic.html"><strong aria-hidden="true">17.1.</strong> Dinic's Algorithm</a></li><li class="chapter-item expanded "><a href="../graphs/flow/mcmf.html"><strong aria-hidden="true">17.2.</strong> MCMF</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Strings</li><li class="chapter-item expanded "><a href="../strings/kmp.html"><strong aria-hidden="true">18.</strong> KMP</a></li><li class="chapter-item expanded "><a href="../strings/manacher.html"><strong aria-hidden="true">19.</strong> Manacher</a></li><li class="chapter-item expanded "><a href="../strings/salcp.html"><strong aria-hidden="true">20.</strong> Suffix Array and LCP Array</a></li><li class="chapter-item expanded affix "><li class="part-title">Geometry</li><li class="chapter-item expanded "><a href="../geometry/convexhull.html"><strong aria-hidden="true">21.</strong> Convex Hull</a></li><li class="chapter-item expanded "><a href="../geometry/line_intersection.html"><strong aria-hidden="true">22.</strong> Line Intersection</a></li><li class="chapter-item expanded affix "><li class="part-title">Unclassified</li><li class="chapter-item expanded "><a href="../unclass/valcomp.html"><strong aria-hidden="true">23.</strong> Value Compression</a></li><li class="chapter-item expanded "><a href="../unclass/lis.html"><strong aria-hidden="true">24.</strong> Longest Increasing Subsequence</a></li><li class="chapter-item expanded "><a href="../unclass/mos.html"><strong aria-hidden="true">25.</strong> Mo's</a></li><li class="chapter-item expanded "><a href="../unclass/bigint.html"><strong aria-hidden="true">26.</strong> Arbitrary-Precision Integer</a></li><li class="chapter-item expanded "><a href="../unclass/fraction.html"><strong aria-hidden="true">27.</strong> Fraction</a></li><li class="chapter-item expanded affix "><li class="part-title">Misc</li><li class="chapter-item expanded "><a href="../misc/fastio.html"><strong aria-hidden="true">28.</strong> Fast IO</a></li><li class="chapter-item expanded "><a href="../misc/itertools.html"><strong aria-hidden="true">29.</strong> Iterator Tools</a></li><li class="chapter-item expanded "><a href="../misc/macro.html"><strong aria-hidden="true">30.</strong> Macros</a></li><li class="chapter-item expanded affix "><li class="part-title">Deprecated</li><li class="chapter-item expanded "><a href="../zdeprecated/adjlist.html"><strong aria-hidden="true">31.</strong> Adjacency List Graph Representation</a></li><li class="chapter-item expanded "><a href="../zdeprecated/zero_one_trait.html"><strong aria-hidden="true">32.</strong> Zero/One Trait</a></li><li class="chapter-item expanded "><a href="../zdeprecated/deprecated_macros.html"><strong aria-hidden="true">33.</strong> Deprecated Macros</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -151,19 +151,33 @@
 <p>Dial algorithm is an alternative to Dijkstra algorithm, which can be used when the maximum value of the edge costs is small. Instead of using a heap, dial algorithm uses a queue of vectors to sort searched paths by their distances. Generally the performance of it is quite similar to that of Dijkstra, but if somehow you want to use this instead, then go ahead!</p>
 <p>The usage is exactly the same with Dijkstra algorithm, except that the name of the function is different.</p>
 <h2 id="code"><a class="header" href="#code">Code</a></h2>
-<pre><code class="language-rust noplayground">use std::num::*;
+<pre><code class="language-rust noplayground">trait HasNz {
+    type NzType;
+    fn into_nz(self) -&gt; Option&lt;Self::NzType&gt;;
+    fn retrieve(nz: Self::NzType) -&gt; Self;
+}
+
+macro_rules! impl_hasnz {
+    ($($t:ty, $n:ty);*) =&gt; { $(
+        impl HasNz for $t {
+            type NzType = $n;
+            fn into_nz(self) -&gt; Option&lt;$n&gt; { &lt;$n&gt;::new(self) }
+            fn retrieve(nz: $n) -&gt; Self { nz.get() }
+        }
+    )* };
+}
+
 impl_hasnz!(i8, NonZeroI8; i16, NonZeroI16; i32, NonZeroI32; i64, NonZeroI64; i128, NonZeroI128; isize, NonZeroIsize);
 impl_hasnz!(u8, NonZeroU8; u16, NonZeroU16; u32, NonZeroU32; u64, NonZeroU64; u128, NonZeroU128; usize, NonZeroUsize);
 
-use std::ops::*;
-fn dial&lt;T&gt;(graph: &amp;Graph&lt;T&gt;, src: usize) -&gt; Vec&lt;Option&lt;T&gt;&gt;
+fn dial&lt;T&gt;(graph: &amp;[Vec&lt;(usize, T)&gt;], src: usize) -&gt; Vec&lt;Option&lt;T&gt;&gt;
 where
     T: Copy + From&lt;u8&gt; + Into&lt;u32&gt; + Add&lt;Output = T&gt; + Sub&lt;Output = T&gt; + Eq + Ord + HasNz,
-    &lt;T as HasNz&gt;::Nz: Copy,
+    &lt;T as HasNz&gt;::NzType: Copy,
 {
-    let max_cost: u32 = graph.edge.iter().map(|x| x.2.into()).max().unwrap_or(0);
+    let max_cost: u32 = graph.iter().map(|list| list.iter().map(|&amp;(_, v)| v.into())).flatten().max().unwrap_or(0);
 
-    let mut dist: Vec&lt;Option&lt;T::Nz&gt;&gt; = vec![None; graph.n];
+    let mut dist: Vec&lt;Option&lt;T::NzType&gt;&gt; = vec![None; graph.len()];
     dist[src] = {
         let one: T = 1.into();
         one.into_nz()
@@ -187,7 +201,7 @@ where
                 continue;
             }
 
-            for (next, &amp;weight) in graph.neighbor(curr as usize) {
+            for &amp;(next, weight) in graph[curr as usize].iter() {
                 let next_cost = curr_cost + weight;
 
                 if dist[next].map_or(true, |x| T::retrieve(x) &gt; next_cost) {
@@ -206,9 +220,7 @@ where
         queue.push_back(hand);
     }
 
-    dist.iter()
-        .map(|x| x.map(|x| T::retrieve(x) - 1.into()))
-        .collect()
+    dist.iter().map(|x| x.map(|x| T::retrieve(x) - 1.into())).collect()
 }</code></pre>
 
                     </main>
@@ -219,7 +231,7 @@ where
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next" href="../graphs/dsu.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="../graphs/scc.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -233,7 +245,7 @@ where
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next" href="../graphs/dsu.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="../graphs/scc.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
